--- a/app/views/taggings/_tagging_entry.html.erb
+++ b/app/views/taggings/_tagging_entry.html.erb
@@ -7,7 +7,7 @@
         <%= tagging_update.title_for_related_link(base_path) %> (<%= base_path %>)
       </a>
 
-      <a href="#" class="select2-search-choice-close" tabindex="-1"></a>
+      <a href="#" class="js-remove-related glyphicon glyphicon-remove remove-icon" tabindex="-1" title="Remove <%= base_path %>"></a>
 
       <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
 
